@@ -68,12 +68,7 @@ LogAccessICP::~LogAccessICP()
 int
 LogAccessICP::marshal_client_host_ip(char *buf)
 {
-  if (buf) {
-    int64_t ip = ink_inet_ip4_addr_cast(m_icp_log->GetClientIP());
-    // ip is already in network order
-    marshal_int(buf, (int64_t)ntohl(ip));
-  }
-  return INK_MIN_ALIGN;
+  return marshal_ip(buf, m_icp_log->GetClientIP());
 }
 
 /*-------------------------------------------------------------------------
