@@ -67,11 +67,9 @@ LogAccessTest::~LogAccessTest()
 int
 LogAccessTest::marshal_client_host_ip(char *buf)
 {
-  if (buf) {
-    int64_t val = 0;
-    marshal_int(buf, val);
-  }
-  return sizeof(int64_t);
+  ts_ip_endpoint lo;
+  ink_inet_ip4_set(&lo, INADDR_LOOPBACK);
+  return marshal_ip(buf, &lo.sa);
 }
 
 /*-------------------------------------------------------------------------
@@ -80,7 +78,7 @@ LogAccessTest::marshal_client_host_ip(char *buf)
 int
 LogAccessTest::marshal_client_auth_user_name(char *buf)
 {
-  static char *str = "major tom";
+  static char const* str = "major tom";
   int len = LogAccess::strlen(str);
   if (buf) {
     marshal_str(buf, str, len);
@@ -94,7 +92,7 @@ LogAccessTest::marshal_client_auth_user_name(char *buf)
 int
 LogAccessTest::marshal_client_req_text(char *buf)
 {
-  static char *str = "GET http://www.foobar.com/ HTTP/1.0";
+  static char const* str = "GET http://www.foobar.com/ HTTP/1.0";
   int len = LogAccess::strlen(str);
   if (buf) {
     marshal_str(buf, str, len);
@@ -121,7 +119,7 @@ LogAccessTest::marshal_client_req_http_method(char *buf)
 int
 LogAccessTest::marshal_client_req_url(char *buf)
 {
-  static char *str = "http://www.foobar.com/";
+  static char const* str = "http://www.foobar.com/";
   int len = LogAccess::strlen(str);
   if (buf) {
     marshal_str(buf, str, len);
@@ -187,7 +185,7 @@ LogAccessTest::marshal_client_finish_status_code(char *buf)
 int
 LogAccessTest::marshal_proxy_resp_content_type(char *buf)
 {
-  static char *str = "text/html";
+  static char const* str = "text/html";
   int len = LogAccess::strlen(str);
   if (buf) {
     marshal_str(buf, str, len);
@@ -331,7 +329,7 @@ LogAccessTest::marshal_server_host_ip(char *buf)
 int
 LogAccessTest::marshal_server_host_name(char *buf)
 {
-  static char *str = "www.foobar.com";
+  static char const* str = "www.foobar.com";
   int len = LogAccess::strlen(str);
   if (buf) {
     marshal_str(buf, str, len);
