@@ -1,7 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.1.1
-  *) TS-1009 Disable starting ICP continuations if ICP is not
-    enabled.
+  *) TS-989 Logging is now IPv6 compatible.
+
+  *) TS-1009 Disable starting ICP continuations if ICP is not enabled.
 
   *) TS-1005 Use traffic_line for reload option with RC script.
    Author: Jan-Frode Myklebust.
